# yjlaser

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  PROJECT_STATUS.md  README.md  TODOS.md  doppler.yaml  eslint.config.mjs  jest.config.js  jest.setup.js  middleware.ts  next.config.ts  package.json  playwright.config.ts  playwright.external-canary.config.ts  pnpm-lock.yaml  setup.sh  tsconfig.json
docs/: API.md  CLOUDFLARE_SETUP.md  EXTERNAL_API_REFERENCE.md  PWA_SETUP.md  SECURITY_CHECKLIST.md  WEBHARD_API_SPEC.md  WEBHARD_ARCHITECTURE.md  agent-workflow.md  architecture.md  assistant-operating-model.md  company-project-overview.md  context-map.md  doppler.md  features-list.md  harness-setup.md  lguplus-sync-guide.md  parent-review-index.md  parent-review-workflow.md  progress.txt  release-readiness.md  risk-gates.md  roadmap.md  task-board.md  team-briefing.md  testing.md  todo.md  verification-matrix.md  workflow.md  거래처-웹하드-폴더-안내.md
e2e/: README.md  check-next-production-csp.ts  contact-feedback-pack.spec.ts  debug-folder-api.spec.ts  drawing-consistency.spec.ts  drawing-timeline.spec.ts  global-setup.ts  google-drive-webhard-user-qa.spec.ts  laser-only-company.spec.ts  security.spec.ts  ui-admin-flows.spec.ts  ui-auth-public.spec.ts  ui-company-flows.spec.ts  ui-operational-workflow-user.spec.ts  ui-operational-workflow-v2.spec.ts  ui-responsive-smoke.spec.ts  ui-webhard-flows.spec.ts  ui-worker-flows.spec.ts  webhard-background.spec.ts  webhard-file-operations.spec.ts  webhard-folder-operations.spec.ts  webhard.spec.ts
public/: erp-manifest.json  erp-sw.js  worker-manifest.json
scripts/: _utils.py  check-next-env.js  check-supabase-advisor-status.js  check-supabase-remediation-readiness.js  credential-rotation-lock.ps1  crop-box-images.js  (+20 more)
현장도면가공프로그램/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
현장도면가공프로그램/benchmarks/: CMakeLists.txt
현장도면가공프로그램/benchmarks/smoke/: CoreSmokeBenchmark.cpp
현장도면가공프로그램/config/: defaults.json
현장도면가공프로그램/docs/: architecture.md  development.md  portable.md
현장도면가공프로그램/scripts/: package-portable.ps1
현장도면가공프로그램/src/app/: MainWindow.cpp  MainWindow.h  main.cpp
현장도면가공프로그램/src/canvas/: CadCanvasWidget.cpp  CadCanvasWidget.h
현장도면가공프로그램/src/config/: AppEnvironment.cpp  AppEnvironment.h
현장도면가공프로그램/src/logging/: Logger.cpp  Logger.h
현장도면가공프로그램/src/ui/: RightPanelWidget.cpp  RightPanelWidget.h  StatusLogWidget.cpp  StatusLogWidget.h  ToolPanelWidget.cpp  ToolPanelWidget.h
현장도면가공프로그램/tests/: CMakeLists.txt
현장도면가공프로그램/tests/smoke/: AppEnvironmentSmokeTest.cpp  LoggerSmokeTest.cpp
(+2131 files in other folders)
