cmake_minimum_required(VERSION 3.26)

project(YJLaserOnsiteDrawingProcessor
    VERSION 0.1.0
    LANGUAGES CXX
)

option(YJCAD_BUILD_TESTS "Build smoke tests" ON)
option(YJCAD_BUILD_BENCHMARKS "Build smoke benchmarks" ON)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

include(CTest)
